--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -151,7 +151,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/SCK_Casual01/Blueprints
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -159,12 +159,36 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
+ContentBrowserTab1.SelectedPaths=/Classes_Game/ObstacleAssault
+ContentBrowserTab1.SourcesExpanded=True
+ContentBrowserTab1.Locked=False
+ContentBrowserTab1.FavoritesAreaExpanded=False
+ContentBrowserTab1.PathAreaExpanded=True
+ContentBrowserTab1.CollectionAreaExpanded=False
+ContentBrowserTab1.FavoritesSearchAreaExpanded=False
+ContentBrowserTab1.PathSearchAreaExpanded=False
+ContentBrowserTab1.CollectionSearchAreaExpanded=False
+ContentBrowserTab1.VerticalSplitter.SlotSize0=0.150000006
+ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
+ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
+ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
+ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
+ContentBrowserTab1.ActiveTypeFilters=
+ContentBrowserTab1.EnabledTypeFilters=
+ContentBrowserTab1.ActiveFrontendFilters=
+ContentBrowserTab1.EnabledFrontendFilters=
+ContentBrowserTab1.PluginFilters=
+ContentBrowserTab1.Favorites.SelectedPaths=
+ContentBrowserTab1.SelectedCollections=
+ContentBrowserTab1.ExpandedCollections=
+ContentBrowserTab1.ThumbnailSize=2
+ContentBrowserTab1.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -812,14 +836,55 @@ DataValidationSettings.Validation Scenarios=True
 GameplayDebuggerUserSettings.GameplayDebugger=True
 GameplayTagsDeveloperSettings.GameplayTags=True
 LogVisualizerSettings.VisualLogger=True
+NiagaraActor.TransformCommon=True
+NiagaraActor.Niagara=True
+NiagaraActor.NiagaraComponent_Parameters=True
+NiagaraActor.Activation=True
+NiagaraActor.Lighting=True
+NiagaraActor.Attachment=True
+NiagaraActor.Randomness=True
+NiagaraActor.Parameters=True
+NiagaraActor.Materials=True
+NiagaraActor.Compilation=True
+NiagaraActor.HLOD=True
+NiagaraActor.Rendering=True
+NiagaraActor.Navigation=True
+NiagaraActor.Tags=True
+NiagaraActor.Cooking=True
+NiagaraActor.Replication=True
+NiagaraActor.Actor=True
+WorldSettings.PrecomputedVisibility=True
+WorldSettings.GameMode=True
+WorldSettings.Lightmass=True
+WorldSettings.World=True
+WorldSettings.Physics=True
+WorldSettings.Broadphase=True
+WorldSettings.HLODSystem=True
+WorldSettings.WorldPartitionSetup=True
+WorldSettings.Foliage=True
+WorldSettings.Navigation=True
+WorldSettings.VR=True
+WorldSettings.Rendering=True
+WorldSettings.Audio=True
+WorldSettings.Tick=True
+MovingPlatform.Rendering=True
+MovingPlatform.Replication=True
+MovingPlatform.Collision=True
+MovingPlatform.HLOD=True
+MovingPlatform.Input=True
+MovingPlatform.Actor=True
+MovingPlatform.Cooking=True
+MovingPlatform.MovingPlatform=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
 GameMapsSettings=True
 EditorStyleSettings=True
 SourceCodeAccessSettings=True
+LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/ObstacleAssault.MovingPlatform;
 RecentlyPlaced=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 
 [ContentBrowserRecent]
@@ -1794,8 +1859,26 @@ ExternalImagePicker.TimeStamp=2022.10.06-20.33.38
 ExternalImagePicker.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.10.06-20.32.34
 BlueprintGraph.LastCompileMethod=Unknown
+ObstacleAssault.TimeStamp=2022.11.01-16.51.16
+ObstacleAssault.LastCompileMethod=External
 
 [Python]
 LastDirectory=
 RecentsFiles=F:/Video Games/Epic Games/UE_5.0/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+
+[PluginBrowser]
+InstalledPlugins=XRVisualization
+
+[DetailCategoriesAdvanced]
+MovingPlatform.Actor=True
+
+[/Script/LiveCoding.LiveCodingSettings]
+bEnabled=False
+bPreloadEngineModules=False
+bPreloadEnginePluginModules=False
+bPreloadProjectModules=True
+bPreloadProjectPluginModules=True
+
+[MessageLog]
+LastLogListing=CompilerResultsLog
 
