--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -875,6 +875,18 @@ MovingPlatform.Input=True
 MovingPlatform.Actor=True
 MovingPlatform.Cooking=True
 MovingPlatform.MovingPlatform=True
+StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.StaticMesh=True
+StaticMeshComponent.Physics=True
+StaticMeshComponent.Collision=True
+StaticMeshComponent.Lighting=True
+StaticMeshComponent.Rendering=True
+StaticMeshComponent.HLOD=True
+StaticMeshComponent.Navigation=True
+StaticMeshComponent.VirtualTexture=True
+StaticMeshComponent.Tags=True
+StaticMeshComponent.Cooking=True
+MovingPlatform.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1873,7 +1885,6 @@ InstalledPlugins=XRVisualization
 MovingPlatform.Actor=True
 
 [/Script/LiveCoding.LiveCodingSettings]
-bEnabled=False
 bPreloadEngineModules=False
 bPreloadEnginePluginModules=False
 bPreloadProjectModules=True
