--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -887,6 +887,7 @@ StaticMeshComponent.VirtualTexture=True
 StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
+StaticMeshComponent.Materials=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
