--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -188,7 +188,7 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -888,6 +888,7 @@ StaticMeshComponent.Tags=True
 StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
 StaticMeshComponent.Materials=True
+MovingPlatform.Moving Platform=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -913,6 +914,7 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+MovingPlatform="\"Object.Moving Platform.PlatformVelocity\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint=0
