--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -67,7 +67,7 @@ EnablePIEEnterAndExitSounds=False
 PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=320,Y=180)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -101,6 +101,7 @@ LastExecutedLaunchName=JOODA
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=320,Y=180)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -147,11 +148,11 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.ActiveTypeFilters=
+ContentBrowserDrawer.ActiveTypeFilters=StaticMesh
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -188,7 +189,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/BP_MovingPlatform.BP_MovingPlatform
+OpenAssetsAtExit=/Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint
+OpenAssetsAtExit=/Game/BP_PushingCube.BP_PushingCube
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -509,7 +513,7 @@ ThirdPersonCharacter_C.Input=True
 ThirdPersonCharacter_C.Actor=True
 ThirdPersonCharacter_C.Materials=True
 BP_ThirdPersonCharacter_Blueprint_C.TransformCommon=True
-BP_ThirdPersonCharacter_Blueprint_C.Animation=True
+BP_ThirdPersonCharacter_Blueprint_C.Animation=False
 BP_ThirdPersonCharacter_Blueprint_C.Mesh=True
 BP_ThirdPersonCharacter_Blueprint_C.Clothing=True
 BP_ThirdPersonCharacter_Blueprint_C.Physics=True
@@ -875,7 +879,7 @@ MovingPlatform.Input=True
 MovingPlatform.Actor=True
 MovingPlatform.Cooking=True
 MovingPlatform.MovingPlatform=True
-StaticMeshComponent.TransformCommon=True
+StaticMeshComponent.TransformCommon=False
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Physics=True
 StaticMeshComponent.Collision=True
@@ -889,6 +893,85 @@ StaticMeshComponent.Cooking=True
 MovingPlatform.TransformCommon=True
 StaticMeshComponent.Materials=True
 MovingPlatform.Moving Platform=True
+BP_MovingPlatform_C.Moving Platform=True
+BP_MovingPlatform_C.Tick=True
+BP_MovingPlatform_C.Replication=True
+BP_MovingPlatform_C.Rendering=True
+BP_MovingPlatform_C.Collision=True
+BP_MovingPlatform_C.Actor=True
+BP_MovingPlatform_C.Input=True
+BP_MovingPlatform_C.HLOD=True
+BP_MovingPlatform_C.WorldPartition=True
+BP_MovingPlatform_C.Events=True
+StaticMeshComponent.Variable=True
+StaticMeshComponent.Sockets=True
+StaticMeshComponent.ComponentTick=True
+StaticMeshComponent.ComponentReplication=True
+StaticMeshComponent.Events=True
+BP_MovingPlatform_C.TransformCommon=True
+BP1_MovingPlatform_C.Moving Platform=True
+BP1_MovingPlatform_C.Tick=True
+BP1_MovingPlatform_C.Replication=True
+BP1_MovingPlatform_C.Rendering=True
+BP1_MovingPlatform_C.Collision=True
+BP1_MovingPlatform_C.Actor=True
+BP1_MovingPlatform_C.Input=True
+BP1_MovingPlatform_C.HLOD=True
+BP1_MovingPlatform_C.WorldPartition=True
+BP1_MovingPlatform_C.Events=True
+SceneComponent.Variable=True
+SceneComponent.TransformCommon=True
+SceneComponent.Sockets=True
+SceneComponent.Rendering=True
+SceneComponent.ComponentTick=True
+SceneComponent.Tags=True
+SceneComponent.ComponentReplication=True
+SceneComponent.Activation=True
+SceneComponent.Cooking=True
+SceneComponent.Events=True
+BP1_MovingPlatform_C.TransformCommon=True
+BP_PushingCube_C.Moving Platform=False
+BP_PushingCube_C.Tick=True
+BP_PushingCube_C.Replication=True
+BP_PushingCube_C.Rendering=True
+BP_PushingCube_C.Collision=True
+BP_PushingCube_C.Actor=True
+BP_PushingCube_C.Input=True
+BP_PushingCube_C.HLOD=True
+BP_PushingCube_C.WorldPartition=True
+BP_PushingCube_C.Events=True
+BP_PushingCube_C.TransformCommon=True
+BP_ThirdPersonCharacter_Blueprint_C.ComponentTick=True
+BP_ThirdPersonCharacter_Blueprint_C.ComponentReplication=True
+BP_ThirdPersonCharacter_Blueprint_C.Variable=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.ComponentTick=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -898,12 +981,18 @@ SourceCodeAccessSettings=True
 LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/BP_PushingCube.BP_PushingCube;
+RecentlyPlaced=/Game/BP1_MovingPlatform.BP1_MovingPlatform;
+RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
 RecentlyPlaced=/Script/ObstacleAssault.MovingPlatform;
 RecentlyPlaced=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
-MRUItem1=/Game/BP_ThirdPersonCharacter_Blueprint
+MRUItem0=/Game/BP_ThirdPersonCharacter_Blueprint
+MRUItem1=/Game/BP_PushingCube
+MRUItem2=/Game/BP1_MovingPlatform
+MRUItem3=/Game/BP_MovingPlatform
+MRUItem4=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_Blueprint_C=
@@ -915,10 +1004,16 @@ Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 MovingPlatform="\"Object.Moving Platform.PlatformVelocity\" "
+LIVECODING_ovingPlatform_1="\"Object.Moving Platform.PlatformVelocity\" "
+LIVECODING_ovingPlatform_2="\"Object.Moving Platform.PlatformVelocity\" "
+BP_MovingPlatform_C="\"Object.Moving Platform.PlatformVelocity\" "
+BP1_MovingPlatform_C="\"Object.Moving Platform.PlatformVelocity\" "
+BP_PushingCube_C="\"Object.Moving Platform.PlatformVelocity\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint=0
 /Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
+/Game/BP_MovingPlatform.BP_MovingPlatform=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1895,4 +1990,7 @@ bPreloadProjectPluginModules=True
 
 [MessageLog]
 LastLogListing=CompilerResultsLog
+
+[SelectionDetails]
+PreserveScaleRatio=True
 
