Fixed obstacle movement bug

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -160,7 +160,7 @@ ContentBrowserDrawer.SelectedCollections=
 ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
-ContentBrowserTab1.SelectedPaths=/Classes_Game/ObstacleAssault
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -189,10 +189,10 @@ ContentBrowserTab1.CurrentViewType=1
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/BP_PushingCube.BP_PushingCube
 OpenAssetsAtExit=/Game/BP_MovingPlatform.BP_MovingPlatform
 OpenAssetsAtExit=/Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint
-OpenAssetsAtExit=/Game/BP_PushingCube.BP_PushingCube
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -879,7 +879,7 @@ MovingPlatform.Input=True
 MovingPlatform.Actor=True
 MovingPlatform.Cooking=True
 MovingPlatform.MovingPlatform=True
-StaticMeshComponent.TransformCommon=False
+StaticMeshComponent.TransformCommon=True
 StaticMeshComponent.StaticMesh=True
 StaticMeshComponent.Physics=True
 StaticMeshComponent.Collision=True
@@ -930,10 +930,10 @@ SceneComponent.Activation=True
 SceneComponent.Cooking=True
 SceneComponent.Events=True
 BP1_MovingPlatform_C.TransformCommon=True
-BP_PushingCube_C.Moving Platform=False
-BP_PushingCube_C.Tick=True
-BP_PushingCube_C.Replication=True
-BP_PushingCube_C.Rendering=True
+BP_PushingCube_C.Moving Platform=True
+BP_PushingCube_C.Tick=False
+BP_PushingCube_C.Replication=False
+BP_PushingCube_C.Rendering=False
 BP_PushingCube_C.Collision=True
 BP_PushingCube_C.Actor=True
 BP_PushingCube_C.Input=True
@@ -972,6 +972,8 @@ CharacterMovementComponent.Events=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
+BP_MovingPlatform_C.MovingPlatform=True
+BP_PushingCube_C.MovingPlatform=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -989,9 +991,9 @@ RecentlyPlaced=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCha
 
 [ContentBrowserRecent]
 MRUItem0=/Game/BP_ThirdPersonCharacter_Blueprint
-MRUItem1=/Game/BP_PushingCube
-MRUItem2=/Game/BP1_MovingPlatform
-MRUItem3=/Game/BP_MovingPlatform
+MRUItem1=/Game/BP_MovingPlatform
+MRUItem2=/Game/BP_PushingCube
+MRUItem3=/Game/BP1_MovingPlatform
 MRUItem4=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
 
 [DetailPropertyExpansion]
@@ -1003,17 +1005,18 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
-MovingPlatform="\"Object.Moving Platform.PlatformVelocity\" "
+MovingPlatform=
 LIVECODING_ovingPlatform_1="\"Object.Moving Platform.PlatformVelocity\" "
 LIVECODING_ovingPlatform_2="\"Object.Moving Platform.PlatformVelocity\" "
-BP_MovingPlatform_C="\"Object.Moving Platform.PlatformVelocity\" "
+BP_MovingPlatform_C=
 BP1_MovingPlatform_C="\"Object.Moving Platform.PlatformVelocity\" "
-BP_PushingCube_C="\"Object.Moving Platform.PlatformVelocity\" "
+BP_PushingCube_C=
 
 [AssetEditorToolkitTabLocation]
 /Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint=0
 /Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/BP_MovingPlatform.BP_MovingPlatform=0
+/Game/BP_PushingCube.BP_PushingCube=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
