--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ ContentBrowserDrawer.ActiveTypeFilters=StaticMesh
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game
+ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -184,6 +184,8 @@ ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ToolbarOpenBPClass.ThumbnailSize=2
+ToolbarOpenBPClass.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/Main
@@ -974,6 +976,11 @@ K2Node_VariableGet.DefaultValueCategory=True
 K2Node_VariableGet.Events=True
 BP_MovingPlatform_C.MovingPlatform=True
 BP_PushingCube_C.MovingPlatform=True
+BP_ObstacleAssaultGameMode_C.Tick=True
+BP_ObstacleAssaultGameMode_C.Classes=True
+BP_ObstacleAssaultGameMode_C.Game=True
+BP_ObstacleAssaultGameMode_C.GameMode=True
+BP_ObstacleAssaultGameMode_C.Events=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -983,6 +990,7 @@ SourceCodeAccessSettings=True
 LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/BP_PushingCube.BP_PushingCube;
 RecentlyPlaced=/Game/BP1_MovingPlatform.BP1_MovingPlatform;
 RecentlyPlaced=/Game/BP_MovingPlatform.BP_MovingPlatform;
@@ -990,11 +998,12 @@ RecentlyPlaced=/Script/ObstacleAssault.MovingPlatform;
 RecentlyPlaced=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_ThirdPersonCharacter_Blueprint
-MRUItem1=/Game/BP_MovingPlatform
-MRUItem2=/Game/BP_PushingCube
-MRUItem3=/Game/BP1_MovingPlatform
-MRUItem4=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/BP_ObstacleAssaultGameMode
+MRUItem1=/Game/BP_ThirdPersonCharacter_Blueprint
+MRUItem2=/Game/BP_MovingPlatform
+MRUItem3=/Game/BP_PushingCube
+MRUItem4=/Game/BP1_MovingPlatform
+MRUItem5=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_Blueprint_C=
