--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -152,7 +152,7 @@ ContentBrowserDrawer.ActiveTypeFilters=StaticMesh
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Classes_Game/ObstacleAssault
+ContentBrowserDrawer.SelectedPaths=/Game
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=
@@ -191,10 +191,14 @@ ToolbarOpenBPClass.CurrentViewType=0
 LastLevel=/Game/Main
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/BP_PushingCube.BP_PushingCube
 OpenAssetsAtExit=/Game/BP_MovingPlatform.BP_MovingPlatform
 OpenAssetsAtExit=/Game/BP_ThirdPersonCharacter_Blueprint.BP_ThirdPersonCharacter_Blueprint
+OpenAssetsAtExit=/Game/BP_ObstacleAssaultGameMode.BP_ObstacleAssaultGameMode
+OpenAssetsAtExit=/Game/BP_RotatingPlatform.BP_RotatingPlatform
+OpenAssetsAtExit=/Game/BP_Sweeper.BP_Sweeper
+OpenAssetsAtExit=/Game/BP_Propel.BP_Propel
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -981,6 +985,74 @@ BP_ObstacleAssaultGameMode_C.Classes=True
 BP_ObstacleAssaultGameMode_C.Game=True
 BP_ObstacleAssaultGameMode_C.GameMode=True
 BP_ObstacleAssaultGameMode_C.Events=True
+BP_RotatingPlatform_C.Moving Platform=True
+BP_RotatingPlatform_C.Tick=True
+BP_RotatingPlatform_C.Replication=True
+BP_RotatingPlatform_C.Rendering=True
+BP_RotatingPlatform_C.Collision=True
+BP_RotatingPlatform_C.Actor=True
+BP_RotatingPlatform_C.Input=True
+BP_RotatingPlatform_C.HLOD=True
+BP_RotatingPlatform_C.WorldPartition=True
+BP_RotatingPlatform_C.Events=True
+BP_RotatingPlatform_C.Rotation=True
+BP_RotatingPlatform_C.TransformCommon=True
+BP_PushingCube_C.Rotation=True
+BP_MovingPlatform_C.Rotation=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Actor=True
+MovingPlatform.Rotation=True
+BP_WindSystem_C.Collision=True
+BP_WindSystem_C.TransformCommon=True
+BP_WindSystem_C.Rendering=True
+BP_WindSystem_C.Replication=True
+BP_WindSystem_C.HLOD=True
+BP_WindSystem_C.Input=True
+BP_WindSystem_C.Actor=True
+Emitter.TransformCommon=True
+Emitter.Particles=True
+Emitter.EmitterActions=True
+Emitter.Materials=True
+Emitter.Attachment=True
+Emitter.LOD=True
+Emitter.Lighting=True
+Emitter.HLOD=True
+Emitter.Rendering=True
+Emitter.Navigation=True
+Emitter.Tags=True
+Emitter.Activation=True
+Emitter.Cooking=True
+Emitter.Emitter=True
+Emitter.Replication=True
+Emitter.Actor=True
+BP_Sweeper_C.Moving Platform=False
+BP_Sweeper_C.Tick=True
+BP_Sweeper_C.Rotation=True
+BP_Sweeper_C.Replication=True
+BP_Sweeper_C.Rendering=True
+BP_Sweeper_C.Collision=True
+BP_Sweeper_C.Actor=True
+BP_Sweeper_C.Input=True
+BP_Sweeper_C.HLOD=True
+BP_Sweeper_C.WorldPartition=True
+BP_Sweeper_C.Events=True
+BP_Sweeper_C.TransformCommon=True
+BP_Propel_C.Moving Platform=True
+BP_Propel_C.Tick=True
+BP_Propel_C.Rotation=True
+BP_Propel_C.Replication=True
+BP_Propel_C.Rendering=True
+BP_Propel_C.Collision=True
+BP_Propel_C.Actor=True
+BP_Propel_C.Input=True
+BP_Propel_C.HLOD=True
+BP_Propel_C.WorldPartition=True
+BP_Propel_C.Events=True
+BP_Propel_C.TransformCommon=True
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -990,6 +1062,14 @@ SourceCodeAccessSettings=True
 LiveCodingSettings=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Gates/SM_Large_Gate_Forcefield.SM_Large_Gate_Forcefield;
+RecentlyPlaced=/Game/BP_Propel.BP_Propel;
+RecentlyPlaced=/Game/SCK_Casual01/Materials/Environment_Materials/MAT_FLOOR_3.MAT_FLOOR_3;
+RecentlyPlaced=/Game/SCK_Casual01/Materials/Environment_Materials/MAT_FLOOR_2.MAT_FLOOR_2;
+RecentlyPlaced=/Game/SCK_Casual01/Materials/Environment_Materials/MAT_BASIC_FLOOR.MAT_BASIC_FLOOR;
+RecentlyPlaced=/Game/BP_Sweeper.BP_Sweeper;
+RecentlyPlaced=/Game/LearningKit_Games/Assets/Architecture/Stairs/SM_Kit_Stairs_A.SM_Kit_Stairs_A;
+RecentlyPlaced=/Game/BP_RotatingPlatform.BP_RotatingPlatform;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/BP_PushingCube.BP_PushingCube;
 RecentlyPlaced=/Game/BP1_MovingPlatform.BP1_MovingPlatform;
@@ -998,12 +1078,15 @@ RecentlyPlaced=/Script/ObstacleAssault.MovingPlatform;
 RecentlyPlaced=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/BP_ObstacleAssaultGameMode
-MRUItem1=/Game/BP_ThirdPersonCharacter_Blueprint
-MRUItem2=/Game/BP_MovingPlatform
-MRUItem3=/Game/BP_PushingCube
-MRUItem4=/Game/BP1_MovingPlatform
-MRUItem5=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
+MRUItem0=/Game/BP_Propel
+MRUItem1=/Game/BP_Sweeper
+MRUItem2=/Game/BP_RotatingPlatform
+MRUItem3=/Game/BP_ObstacleAssaultGameMode
+MRUItem4=/Game/BP_ThirdPersonCharacter_Blueprint
+MRUItem5=/Game/BP_MovingPlatform
+MRUItem6=/Game/BP_PushingCube
+MRUItem7=/Game/BP1_MovingPlatform
+MRUItem8=/Game/SCK_Casual01/Blueprints/ThirdPersonCharacter
 
 [DetailPropertyExpansion]
 BP_ThirdPersonCharacter_Blueprint_C=
@@ -1026,6 +1109,10 @@ BP_PushingCube_C=
 /Game/SCK_Casual01/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter=0
 /Game/BP_MovingPlatform.BP_MovingPlatform=0
 /Game/BP_PushingCube.BP_PushingCube=0
+/Game/BP_ObstacleAssaultGameMode.BP_ObstacleAssaultGameMode=0
+/Game/BP_RotatingPlatform.BP_RotatingPlatform=0
+/Game/BP_Sweeper.BP_Sweeper=0
+/Game/BP_Propel.BP_Propel=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1993,6 +2080,7 @@ InstalledPlugins=XRVisualization
 
 [DetailCategoriesAdvanced]
 MovingPlatform.Actor=True
+BP_RotatingPlatform_C.Tick=False
 
 [/Script/LiveCoding.LiveCodingSettings]
 bPreloadEngineModules=False
@@ -2004,5 +2092,5 @@ bPreloadProjectPluginModules=True
 LastLogListing=CompilerResultsLog
 
 [SelectionDetails]
-PreserveScaleRatio=True
+PreserveScaleRatio=False
 
